[tool.poetry]
name = "cluedin"
version = "2.4.0b1"
description = "A Python client for CluedIn API."
authors = ["Roman Klimenko <romaklimenko@gmail.com>"]
readme = "cluedin/README.md"
license = "MIT"
keywords = ["cluedin", "mdm", "master data management"]
maintainers = ["Roman Klimenko <romaklimenko@gmail.com>"]
homepage = "https://github.com/romaklimenko/cluedin"
repository = "https://github.com/romaklimenko/cluedin"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
