[tool.poetry]
name = "cluedin"
version = "2.6.0"
description = "A Python client for CluedIn API."
authors = ["Roman Klimenko <roman@klimenko.dk>"]
readme = "cluedin/README.md"
license = "MIT"
keywords = ["cluedin", "mdm", "master data management"]
maintainers = ["Roman Klimenko <roman@klimenko.dk>"]
homepage = "https://github.com/romaklimenko/cluedin"
repository = "https://github.com/romaklimenko/cluedin"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.29.0"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
