[tool.poetry]
name = "cluedin"
version = "3.0.0"
description = "CluedIn Python SDK"
authors = ["Roman Klimenko <roman@klimenko.dk>"]
readme = "cluedin/README.md"
license = "MIT"
keywords = ["cluedin", "mdm", "master data management"]
maintainers = ["Roman Klimenko <roman@klimenko.dk>"]
homepage = "https://github.com/romaklimenko/cluedin"
repository = "https://github.com/romaklimenko/cluedin"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
